# tx2hax

./: .gitignore  README.md
ml1hax/: README.md
ml1hax/fastbooted/: Cargo.toml  dtbhax.ld  sparsehax.ld
ml1hax/fastbooted/payload/: Cargo.toml  build-dtbhax.sh  build-usb.sh  ccplex-meow-meow.json
ml1hax/fastbooted/payload-helpers/: Cargo.toml
ml1hax/fastbooted/payload-helpers/src/: lib.rs
ml1hax/fastbooted/payload/.cargo/: config.toml
ml1hax/fastbooted/payload/src/: fastboot.rs  libusbf.rs  main.rs  setup.rs
ml1hax/fastbooted/payload/src/fastboot/: commands.rs  externs.rs  flash.rs
ml1hax/fastbooted/payload/src/fastboot/commands/: dtbhax.rs  dump.rs  fuses.rs  partitions.rs  security.rs  utils.rs
ml1hax/fastbootrs/: Cargo.toml  build.rs
ml1hax/fastbootrs/src/: args.rs  fastboot.rs  main.rs
rcmhax/: .gitignore  Cargo.toml  README.md
rcmhax/launcher/: Cargo.toml
rcmhax/launcher/src/: device.rs  hax.rs  lib.rs  main.rs  sehax.rs
rcmhax/payload/: Cargo.toml  bpmp-katze-none.json
rcmhax/payload-sehax/: Cargo.toml  bpmp-katze-none.json  rcm.ld
rcmhax/payload-sehax/.cargo/: config.toml
rcmhax/payload-sehax/src/: externs.rs  main.rs  mmio.rs  setup.rs
rcmhax/payload/.cargo/: config.toml
rcmhax/payload/src/: externs.rs  main.rs
writeups/: dtbhax.md  obtaining-bootrom.md  rcmhax.md  sparsehax.md
