[package]
name = "fastbootrs"
version = "0.1.0"
edition = "2024"
authors = ["Elise Amber Katze <ml1@katze.sh>"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
indicatif = "0.17.9"
rusb = "0.9.4"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
