[package]
name = "rcmhax-launcher"
version = "0.1.0"
edition = "2024"

[features]
default = ["sehax"]
sehax = ["aes", "cbc", "rayon", "sha2"]

[dependencies]
aes = { version = "0.8.4", optional = true }
anyhow = "1.0.98"
cbc = { version = "0.1.2", optional = true }
clap = { version = "4.5.40", features = ["derive"] }
indicatif = "0.17.11"
rayon = { version = "1.11.0", optional = true }
rusb = "0.9.4"
sha2 = { version = "0.10.9", optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
